[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttsai"
version = "0.1.0"
description = "Python SDK for the TTS.ai text-to-speech API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "TTS.ai", email = "support@tts.ai"},
]
keywords = ["tts", "text-to-speech", "voice", "ai", "speech-synthesis", "voice-cloning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.20.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.8.0"]
dev = [
    "aiohttp>=3.8.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "responses>=0.20",
]

[project.urls]
Homepage = "https://tts.ai"
Documentation = "https://tts.ai/api-docs"
Repository = "https://github.com/ttsaigit/tts-python"
Issues = "https://github.com/ttsaigit/tts-python/issues"

[tool.setuptools.packages.find]
include = ["tts_ai*"]

[tool.setuptools.package-data]
tts_ai = ["py.typed"]
